--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "browserify": "~11.2.0",
     "chai": "~3.3.0",
     "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-karma": "~0.12.1",
     "grunt-simple-mocha": "~0.4.0",
     "istanbul": "^0.4.0",
+    "jshint": "^2.9.1-rc1",
     "karma": "~0.13.11",
     "karma-browserify": "~4.4.0",
     "karma-chai": "^0.1.0",
