--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "browserify": "~11.2.0",
     "chai": "~3.3.0",
     "grunt": "~0.4.5",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-karma": "~0.12.1",
@@ -33,6 +34,7 @@
     "mocha": "~2.3.3",
     "phantomjs": "~1.9.18",
     "readable-stream": "~2.0.2",
-    "sinon": "~1.17.1"
+    "sinon": "~1.17.1",
+    "testem": "^0.9.11"
   }
 }
