--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-jscoverage": "^0.1.3",
     "grunt-karma": "~0.12.1",
     "grunt-simple-mocha": "~0.4.0",
     "istanbul": "^0.4.0",
