--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "ci-test": "istanbul cover tape \"test/*-test.js\" > test.tap && istanbul report clover"
   },
   "author": "",
   "license": "BSD-2-Clause",
