--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ci-test": "istanbul cover tape \"test/*Test.js\" > test.tap && istanbul report clover"
+    "ci-test": "istanbul cover _mocha \"test/*Test.js\" > test/test.tap && istanbul report clover"
   },
   "author": "",
   "license": "BSD-2-Clause",
@@ -22,7 +22,7 @@
     "grunt-jscoverage": "^0.1.3",
     "grunt-karma": "~0.12.1",
     "grunt-simple-mocha": "~0.4.0",
-    "istanbul": "^0.4.0",
+    "istanbul": "^0.4.1",
     "jshint": "^2.9.1-rc1",
     "karma": "~0.13.11",
     "karma-browserify": "~4.4.0",
@@ -37,6 +37,7 @@
     "phantomjs": "~1.9.18",
     "readable-stream": "~2.0.2",
     "sinon": "~1.17.1",
+    "tape": "^4.2.2",
     "testem": "^0.9.11"
   }
 }
