--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "ci-test": "istanbul cover _mocha \"test/*Test.js\" > test/test.tap && istanbul report clover",
-    "ci-lint": "jshint --reporter=checkstyle \"lib/*.js\" > checkstyle/checkstyle-result.xml"
+    "ci-lint": "jshint --reporter=checkstyle \"lib/*.js\" > checkstyle-result.xml"
     
   },
   "author": "",
