--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ci-test": "istanbul cover _mocha \"test/*Test.js\" > test/test.tap && istanbul report clover",
+    "ci-test": "mocha -R tap > test/test.tap && istanbul cover _mocha -- -R tap",
     "ci-lint": "eslint -f checkstyle \"lib/*.js\" > checkstyle-result.xml"
     
   },
