--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "ci-test": "mocha -R tap > test/test.tap && istanbul cover _mocha -- -R tap",
     "ci-lint": "eslint -f checkstyle \"lib/*.js\" > checkstyle-result.xml"
-    
   },
   "author": "",
   "license": "BSD-2-Clause",
@@ -18,11 +17,13 @@
     "browserify": "~11.2.0",
     "chai": "~3.3.0",
     "grunt": "~0.4.5",
+    "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-jscoverage": "^0.1.3",
     "grunt-karma": "~0.12.1",
+    "grunt-plato": "^1.2.1",
     "grunt-simple-mocha": "~0.4.0",
     "istanbul": "^0.4.1",
     "jshint": "^2.9.1-rc1",
