--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-simple-mocha": "~0.4.0",
     "istanbul": "^0.4.1",
     "jshint": "^2.9.1-rc1",
+    "jshint-stylish": "^2.1.0",
     "karma": "~0.13.11",
     "karma-browserify": "~4.4.0",
     "karma-chai": "^0.1.0",
